p2/manifests/ingress/app3-default-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-default-ingress
  namespace: iot-p2
spec:
  ingressClassName: traefik
  defaultBackend:
    service:
      name: app3-svc
      port:
        number: 80
